# AlgorithmsProject

./: .gitignore  CMakeLists.txt  README.md
avl/: avl.c  avl.h  avl_main.c
bst/: Makefile  bst.c  bst.h  bst_main  bst_main.c
first_part/: heapselect_main.c  medianselect_main.c  quickselect_main.c  select_fun.c  select_fun.h  times.c  times.txt  utils.c  utils.h
first_part/report/: report.aux  report.dvi  report.out  report.tex  report.toc
first_part/times/: basic_times.txt  changing_k.txt  heap3D.txt  ordered.txt  orderedk1.txt  times_k1.txt
heap/: Makefile  maxheap.c  maxheap.h  minheap.c  minheap.h  minheap_main.c
mtwister/: mtwister.c
rbt/: Makefile  rbt.c  rbt.h  rbt_main.c
second_part/: times.c  utils.c  utils.h
second_part/report/: report.aux  report.dvi  report.tex  report.toc
second_part/times/: all.txt  all_ordered.txt  basic_times.txt  finds.txt  finds_ordered.txt  finds_ordered_avl_rbt.txt
